AP-20357: use aws sdk v2 for o.k.cloud.aws.redshift
AP-20357 (Use AWS SDK v2 for o.k.cloud.aws.redshift)